RESOLVED FIXED105861
REGRESSION (r132591): Underpainting @ uofmchildrenshospital.org
https://bugs.webkit.org/show_bug.cgi?id=105861
Summary REGRESSION (r132591): Underpainting @ uofmchildrenshospital.org
Eric Seidel (no email)
Reported 2012-12-29 13:29:37 PST
Created attachment 180943 [details] screenshot showing underpainting Underpainting @ uofmchildrenshospital.org http://www.uofmchildrenshospital.org/Providers/Bio/D_122501 Click on "publications" then click on "health topics". Notice the lack of redraw (see screenshot). Google Chrome 25.0.1364.5 (Official Build 174090) dev OS Mac OS X WebKit 537.22 (@138211) JavaScript V8 3.15.11.2 I've not tried TOT yet.
Attachments
screenshot showing underpainting (149.69 KB, image/png)
2012-12-29 13:29 PST, Eric Seidel (no email)
no flags
Reduction: showcase the issue, needs to be converted into a repainting test (1.11 KB, text/html)
2013-01-11 11:09 PST, Julien Chaffraix
no flags
Proposed fix: force overhanging floats to repaint themselves. (5.16 KB, patch)
2013-01-11 13:47 PST, Julien Chaffraix
no flags
Eric Seidel (no email)
Comment 1 2012-12-29 13:30:34 PST
(Notice in the screenshot how "Related health topics" is overlaid on top of the publications content.) It's very possible this has already been fixed on TOT.
Eric Seidel (no email)
Comment 2 2012-12-29 14:35:40 PST
I just tested r138568 (TOT) and the bug appears. I also tested Safari Version 6.0.2 (8536.26.17), and saw no bug. Appears to be a regression.
Robert Hogan
Comment 3 2012-12-30 02:28:50 PST
No sign of the bug on r136278 so it is since then..
Eric Seidel (no email)
Comment 4 2012-12-30 10:30:34 PST
Running git bisect now.
Eric Seidel (no email)
Comment 5 2012-12-30 12:46:02 PST
I had forgotten how useful bisect-builds was. :) So much faster than git-bisect: bisect-builds -r 136278:136846 http://www.uofmchildrenshospital.org/Providers/Bio/D_122501
Eric Seidel (no email)
Comment 6 2012-12-30 13:58:24 PST
git bisect says this was bug 102624.
Alexey Proskuryakov
Comment 7 2013-01-02 10:02:21 PST
Simon Fraser (smfr)
Comment 8 2013-01-04 15:34:47 PST
This fails at least as far back as r133742.
Simon Fraser (smfr)
Comment 9 2013-01-04 15:44:33 PST
Regressed with http://trac.webkit.org/changeset/132591, which makes it M. Chaffraix.
Eric Seidel (no email)
Comment 10 2013-01-04 15:59:52 PST
Apologies for the confusion.
Julien Chaffraix
Comment 11 2013-01-11 11:07:40 PST
Copied Herr Fraser, I am on it.
Julien Chaffraix
Comment 12 2013-01-11 11:09:21 PST
Created attachment 182372 [details] Reduction: showcase the issue, needs to be converted into a repainting test
Julien Chaffraix
Comment 13 2013-01-11 13:47:30 PST
Created attachment 182410 [details] Proposed fix: force overhanging floats to repaint themselves.
Eric Seidel (no email)
Comment 14 2013-01-11 13:59:24 PST
mitz or hyatt are really your best reviewers here.
Dave Hyatt
Comment 15 2013-01-14 13:59:40 PST
Comment on attachment 182410 [details] Proposed fix: force overhanging floats to repaint themselves. r=me
WebKit Review Bot
Comment 16 2013-01-14 14:24:32 PST
Comment on attachment 182410 [details] Proposed fix: force overhanging floats to repaint themselves. Clearing flags on attachment: 182410 Committed r139664: <http://trac.webkit.org/changeset/139664>
WebKit Review Bot
Comment 17 2013-01-14 14:24:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.