REGRESSION (r132591): Underpainting @ uofmchildrenshospital.org https://bugs.webkit.org/show_bug.cgi?id=105861

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/repaint/overhanging-float-detach-repaint.html

The issue comes from overhanging float not contributing to their containing block's
overflow. This meant that repaint() would ignore them leading to an under-repaint.
The fix is simple: force all the overhanging floats to repaint themselves.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::destroyAndCleanupAnonymousWrappers):

LayoutTests:

* fast/repaint/overhanging-float-detach-repaint-expected.png: Added.
* fast/repaint/overhanging-float-detach-repaint-expected.txt: Added.
* fast/repaint/overhanging-float-detach-repaint.html: Added.


Canonical link: https://commits.webkit.org/125054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139664 268f45cc-cd09-0410-ab3c-d52691b4dbfc